# salareen-ex03

./: .env-example  README.md  pyproject.toml
assets/: __init__.py  generate_figures.py  hitl_comparison_table.csv
config/: agents.yaml  tasks.yaml
docs/: PLAN.md  PRD.md  PROMPT_LOG.md  TODO.md
latex/: main.tex  refs.bib
results/: article_draft.md  article_final.md  article_outline.md  research_notes.md  review_notes.md
src/: __init__.py  main.py
src/agents/: __init__.py  factory.py
src/pipeline/: __init__.py  article_pipeline.py  crew_builder.py  latex_builder.py  latex_templates.py  main.py  offline_content.py  offline_templates.py
src/tasks/: __init__.py  factory.py
src/tools/: __init__.py  config_loader.py  file_tools.py  search_tools.py
tests/: __init__.py  test_article_pipeline.py  test_config_loader.py  test_file_tools.py  test_generate_figures.py  test_latex_builder.py  test_offline_content.py  test_pipeline_dry_run.py  test_pipeline_main.py  test_search_tools.py
